2003-04-09  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3222708 -- REGRESSION: repro crash trying to read news at nttdocomo

        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): Make window.open do its location
        change with scheduleRedirection like all the other JavaScript calls that change location.

2003-04-08  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3221400 -- REGRESSION: password field with onfocus handler that does select causes focus/typing trouble

        * kwq/KWQTextField.mm:
        (-[KWQTextField selectText:]): Rearrange slightly.
        (-[KWQTextField becomeFirstResponder]): Add code to make the secure field first responder
        when in password mode. The old code did this indirectly through the call to setDocumentFocus,
        which caused minor trouble.
        (-[KWQSecureTextField selectText:]): Correct the current editor check to use a technique
        that works even for the secure text field's editor (which does not get returned by currentEditor).
        
        * kwq/KWQWidget.mm: (QWidget::hasFocus): Update the logic here so it works for the secure text
        field and the secure text field's editor.

2003-04-08  David Hyatt  <hyatt@apple.com>

	Fix for 3166374.  Making the nudie blog work.  My loop for
	removing floating objects when they got deleted wasn't catching
	all the cases.
	
        Reviewed by darin

        * khtml/rendering/render_object.cpp:
        (RenderObject::removeFromObjectLists):

2003-04-08  David Hyatt  <hyatt@apple.com>

	Fix for 3220979.  Regression caused by changes to the CSS
	parser's error handling.  Fix is to narrow my original patch
	to handle a specific subtype of error for properties.
	
        Reviewed by darin

        * khtml/css/parser.cpp:
        * khtml/css/parser.y:

2003-04-08  Richard Williamson   <rjw@apple.com>

        Fixed 3221353.  Added check for nil part.
        
        Reviewed by Darin.
